# Distribution-Checker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/Distribution_Checker/: __init__.py  main.py
tests/: test.html  test.ipynb
