[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "Distribution_Checker"
version = "0.1.2"
authors = [
  { name="Amir Hosein Rasouli", email="amirhr098@yahoo.com" },
]
description = "Python Distribution Checker for Pandas datas using Scipy package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/amirhr098/Distribution-Checker"
"Bug Tracker" = "https://github.com/amirhr098/Distribution-Checker/issues"